--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "concurrently \"nodemon server/index.js\"  \"npm run start --prefix client\" "
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/jmyoon8/node-mysql/issues"
   },
-  "homepage": "https://github.com/jmyoon8/node-mysql#readme"
+  "homepage": "https://github.com/jmyoon8/node-mysql#readme",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
