--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/jmyoon8/node-mysql#readme",
   "dependencies": {
+    "concurrently": "^5.3.0",
     "express": "^4.17.1"
   }
 }
