--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "concurrently": "^5.3.0",
     "express": "^4.17.1",
     "multer": "^1.4.2",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "react-router-dom": "^5.2.0"
   }
 }
