--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"nodemon server/index.js\"  \"npm run start --prefix client\" "
+    "dev": "concurrently \"nodemon server/index.js\"  \"npm run start --prefix client\" ",
+    "heroku-postbuild" :"npm install --prefix client && npm run build --prefix client"
+
   },
   "repository": {
     "type": "git",
