--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "concurrently \"nodemon server/index.js\"  \"npm run start --prefix client\" ",
+    "start": "concurrently \"nodemon server/index.js\"  \"npm run start --prefix client\" ",
     "heroku-postbuild" :"npm install --prefix client && npm run build --prefix client"
 
   },
