--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"nodemon server/index.js\"  \"npm run start --prefix client\" ",
+    "dev": "concurrently \"nodemon server/index.js\"",
     "start": "concurrently \"nodemon server/index.js\"  \"npm run start --prefix client\" ",
     "heroku-postbuild" :"npm install --prefix client && npm run build --prefix client"
 
