--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "https://manangeboard.herokuapp.com/",
+  "proxy": "http://localhost:2000",
   "name": "client",
   "version": "0.1.0",
   "private": true,
